# IB_MCP

api_gateway/: conf.yaml
mcp_server/: config.py  pyproject.toml
mcp_server/routers/: alerts.py  scanner.py
