[project]
name = "ib-fastmcp-server"
version = "0.1.0"
description = "FastMCP server for Interactive Brokers Web API"
authors = [
    {name = "Ruben Contesti", email = "rcontesti@gmail.com"}
]

requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.10.3",
    "fastapi==0.116.0",
    "uvicorn==0.35.0",
    "httpx==0.28.1",
    "urllib3==2.5.0",
    "mcp==1.10.1",
    "asyncio==3.4.3",
    "aiohttp==3.12.13",
]

[dependency-groups]
dev = []
